--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,16 @@ dependencies:
   image_picker: ^0.6.7+9
   path: ^1.7.0
 
+  # Test Sweets automation
+  testsweets: ^0.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Test Sweets automation
+  # testsweets_generator: ^0.0.1+2
+  build_runner: ^1.10.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
