--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_driver:
+    sdk: flutter
+
   # Test Sweets automation
   build_runner:
   testsweets_generator: ^0.0.1+2
